--- a/WalkieChatie/src/walkiechatie/WalkieChatieGUI.form
+++ b/WalkieChatie/src/walkiechatie/WalkieChatieGUI.form
@@ -100,8 +100,8 @@
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-                  <Component id="jSplitPane1" min="-2" pref="365" max="-2" attributes="0"/>
-                  <EmptySpace pref="79" max="32767" attributes="0"/>
+                  <Component id="jSplitPane1" pref="365" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -157,6 +157,7 @@
         <Container class="javax.swing.JScrollPane" name="jScrollPane4">
           <Properties>
             <Property name="horizontalScrollBarPolicy" type="int" value="31"/>
+            <Property name="autoscrolls" type="boolean" value="true"/>
           </Properties>
           <AuxValues>
             <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
@@ -175,6 +176,9 @@
                 <Property name="contentType" type="java.lang.String" value="text/html" noResource="true"/>
                 <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;body&gt;&lt;/body&gt;&lt;/html&gt;"/>
               </Properties>
+              <Events>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="chatTextPaneKeyPressed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
